# my-python-ci-project

./: CMakeLists.txt  Dockerfile  README.md  main.cpp  test.cpp  test_app.py
.github/workflows/: cpp-release.yml  docker-cpp.yml  docker-tests.yml  python-ci.yml.yml  release.yml
